--- a/client/src/components/component.css
+++ b/client/src/components/component.css
@@ -1,49 +1,171 @@
-.question-section {
-    width: 100%;
+.main-page {
+  width: 80%;
+  height: auto;
+  /* background-color: blueviolet; */
+  /* justify-content: center; */
+  margin-top: 120px;
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+  /* margin: 20px auto 40px auto; */
+}
+
+h1 {
+  font-size: 48px;
+  /* padding-bottom: 60px; */
+  color:  rgba(255, 222, 54, 1);
+}
+
+h2 {
+  font-size: 40px;
+  /* color: rgba(255, 255, 255, 1); */
+  color: rgba(255, 222, 54, 1);
+}
+
+
+
+button:hover {
+  scale: 1.1;
+  text-decoration: none;
+}
+
+.operation-button {
+    width: 240px;
+    box-sizing: border-box; 
     height: 100px;
-    background-color: rgb(253, 127, 255);
-    border: 2px solid black;
-    font-size: 20px;
+    background-color: rgb(255, 255, 255);
+    color: rgb(22, 23, 54);
+    border-radius: 40px;
+    border: none;
+    font-size: 24px;
     display: flex;
-    text-align: center;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    /* text-align: center; */
+  }
+
+  .operation-button:hover {
+    background-color: rgba(255, 222, 54, 1);
+  }
+
+  .operation-button:active {
+    background-color: rgb(243, 203, 0);
+    font-size: 26px;
   }
   
   .question-section-set {
-   
     width: 100%;
-    height: auto; display: flex;
-    flex-direction: row;
-    gap: calc(20%/3);
-   
-    background-color: chartreuse;
-    padding: auto;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding-top: 40px;
+    /* background-color: chartreuse; */
   }
 
   .input-field {
-    width: 60%;
-    height: 120px;
-    border: 2px solid black;
+    width: 100%;
+    height: 80px;
+    border: none;
+    border-radius: 16px;
+    font-size: 36px;
+    text-align: center;
+    margin: 20px auto;
   }
 
   .answer-button {
     width: 200px;
-    height: 120px;
-    border-radius: 20px;
-    background-color: sandybrown;
-    color: black;
-    font-size: 20px;
+    height: 80px;
+    border-radius: 30px;
+    border: none;
+    background-color:rgba(255, 255, 255, 1);
+    color: rgba (22, 23, 54, 1);
+    font-size: 24px;
     cursor: pointer;
   }
 
   .answer-button:hover {
-    scale: 1.1;
-    background-color: aquamarine;
+    background-color: rgba(255, 222, 54, 1);
+  }
+
+  .go-to-main-page-button {
+    width: 240px;
+    height: 80px;
+    margin-top: 20px;
+    border: none;
+    border-radius: 20px;
+    background-color: rgba(121, 181, 252, 1);
+    color: rgba (22, 23, 54, 1);
+    font-size: 20px;
   }
 
   .answer-block {
-    width: 80%;
+    width: 100%;
     display: flex;
-    gap: auto;
-    flex-direction: row;
-    justify-content: center;
+    /* margin-top: 20px; */
+    /* gap: auto; */
+    /* flex-direction: row; */
+    justify-content: space-between;
   }
+
+  .example-block {
+    /* padding-left: 40px; */
+    display: flex;
+    margin-top: 40px;;
+    flex-direction: column;
+    /* gap: 40px; */
+    width: 60%;
+    align-items: center;
+  }
+
+  .example-box {
+    width: 360px;
+    height: 160px;
+    background-color: rgb(236, 236, 236);
+    border-radius: 20px;
+    border: 8px rgba(255, 222, 54, 1) solid;
+    justify-content: center;
+    align-items: center;
+    
+  }
+
+  .example-text {
+    font-size: 32px;
+  font-weight: bold;
+  /* color:  rgba(255, 255, 255, 1); */
+  color: rgb(62, 130, 213);
+  text-align: center;
+
+  }
+
+  .example-answer {
+    display: flex;
+    width: 100%;
+  }
+
+.result-block {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.example-page {
+  display: flex;
+  width: 100%;
+}
+
+.img-example-page {
+  width: 80%;
+  height: auto;
+  object-fit: cover;
+}
+
+.image-block {
+  display: flex;
+  width: 35%;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+}
