--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,11 +1,17 @@
+body {
+  width: 100%;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(126, 128, 217, 1);
+}
+
 #root {
   width: 100%;
-  height: 100vh;
-  /* justify-content: center; */
+  height: auto;
   display: flex;
-  /* padding: auto; */
-  background-color: rgba(126, 128, 217, 1);
-  
+  flex-direction: column;
+  /* background-color: rgba(126, 128, 217, 1); */
 }
 
 :root {
