--- a/client/src/components/component.css
+++ b/client/src/components/component.css
@@ -84,6 +84,25 @@ button:hover {
   font-size: 26px;
 }
 
+.header {
+  width: 100%;
+  height: 100px;
+  position: relative;
+}
+
+.go-back-button {
+  position: absolute;
+  left: 60px;
+  top: 40px;
+  width: 80px;
+  height: 40px;
+  background-color: rgb(22, 23, 54);
+  color: rgb(236, 236, 236);
+  font-size: 20px;
+  border-radius: 8px;
+  border: none;
+}
+
 .example-page {
   display: flex;
   width: 100%;
@@ -91,15 +110,17 @@ button:hover {
 
 .image-block {
   display: flex;
+  flex-direction: column;
   width: 35%;
   height: 100%;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
 }
 
 .img-example-page {
   width: 80%;
   height: auto;
+  padding: 0 10%;
   object-fit: cover;
 }
 
