--- a/client/src/components/component.css
+++ b/client/src/components/component.css
@@ -443,6 +443,49 @@ h2 {
   }
 }
 
+/* .answer-card {
+  width: 256px;
+  height: 128px;
+  padding: 16px; 
+  margin: 8px; 
+  background-color: #3b82f6; 
+  color: white; 
+  text-align: center; 
+  border-radius: 4px; 
+  cursor: grab; 
+}
+
+.drop-zone {
+  padding: 24px; 
+  border-width: 2px; 
+  border-style: dashed; 
+  border-color: #6b7280; 
+  border-radius: 8px; 
+  width: 256px; 
+  height: 128px; 
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+}
+
+.dnd-zone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.drop-card {
+  position: absolute;
+  width: 10rem;
+  height: 5rem;
+  background-color: #3b82f6;
+  color: #ffffff;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+} */
+
 .quiz-container {
   display: flex;
   flex-direction: column;
@@ -466,10 +509,11 @@ h2 {
   justify-content: center;
   border-radius: 8px;
   cursor: grab;
+  transition: transform 0.3s ease-in-out;
 }
 
 .empty-card {
-  background-color: #ccc; /* Серый цвет после перетаскивания */
+  background-color: #ccc;
   cursor: default;
 }
 
@@ -494,6 +538,7 @@ h2 {
   align-items: center;
   justify-content: center;
   border-radius: 8px;
+  transition: transform 0.3s ease-in-out;
 }
 
 .correct-msg {
