--- a/client/src/components/component.css
+++ b/client/src/components/component.css
@@ -496,11 +496,12 @@ h2 {
 .answers-container {
   display: flex;
   gap: 10px;
+  padding: 40px;
 }
 
 .answer-card {
-  width: 120px;
-  height: 50px;
+  width: 160px;
+  height: 80px;
   background-color: #3b82f6;
   color: white;
   text-align: center;
@@ -524,6 +525,7 @@ h2 {
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   border-radius: 8px;
   position: relative;
 }
