--- a/client/src/components/component.css
+++ b/client/src/components/component.css
@@ -106,6 +106,7 @@ button:hover {
 .example-page {
   display: flex;
   width: 100%;
+  gap: 5%;
 }
 
 .image-block {
@@ -125,10 +126,11 @@ button:hover {
 
 .example-block {
   display: flex;
-  margin-top: 40px;;
+  /* margin-top: 40px;; */
   flex-direction: column;
-  width: 60%;
+  width: 50%;
   align-items: center;
+  justify-content: center;
 }
 
 .formula {
@@ -140,12 +142,14 @@ button:hover {
 .example-answer {
   display: flex;
   width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
 .example-box {
   display: flex;
   width: 60%;
-  height: 160px;
+  height: 100px;
   background-color: rgb(236, 236, 236);
   border-radius: 20px;
   border: 8px rgba(255, 222, 54, 1) solid;
@@ -187,6 +191,7 @@ button:hover {
   flex-wrap: wrap;
   row-gap: 20px;
   justify-content: space-between;
+  margin-bottom: 40px;
 }
 
 .answer-button {
@@ -232,6 +237,77 @@ button:hover {
 .go-to-main-page-button:hover {
   background-color: rgba(255, 222, 54, 1);
   color: rgb(22, 23, 54)
+}
+
+.quiz-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-bottom: 40px;
+}
+
+.answers-container {
+  display: flex;
+  gap: 10px;
+  padding: 40px;
+}
+
+.answer-card {
+  width: 160px;
+  height: 80px;
+  background-color: #3b82f6;
+  color: white;
+  font-size: 24px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  cursor: grab;
+  transition: transform 0.3s ease-in-out;
+}
+
+.empty-card {
+  background-color: #ccc;
+  cursor: default;
+}
+
+.drop-zone {
+  width: 200px;
+  height: 100px;
+  border: 2px dashed #666;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  border-radius: 8px;
+  position: relative;
+}
+
+.dropped-card {
+  width: 100%;
+  height: 100%;
+  background-color: #3b82f6;
+  color: white;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.correct-msg {
+  color: green;
+  font-size: 18px;
+}
+
+.wrong-msg {
+  color: red;
+  font-size: 18px;
 }
 
 
@@ -397,6 +473,8 @@ h2 {
   .example-block {
     margin-top: 20px;
     width: 100%;
+    /* justify-content: center;
+    align-items: center; */
   }
   
   .formula {
@@ -412,6 +490,8 @@ h2 {
     width: 80%;
     height: 100px;
     border: 6px rgba(255, 222, 54, 1) solid;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .example-text {
@@ -486,69 +566,4 @@ h2 {
   justify-content: center;
 } */
 
-.quiz-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 20px;
-}
 
-.answers-container {
-  display: flex;
-  gap: 10px;
-  padding: 40px;
-}
-
-.answer-card {
-  width: 160px;
-  height: 80px;
-  background-color: #3b82f6;
-  color: white;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 8px;
-  cursor: grab;
-  transition: transform 0.3s ease-in-out;
-}
-
-.empty-card {
-  background-color: #ccc;
-  cursor: default;
-}
-
-.drop-zone {
-  width: 200px;
-  height: 100px;
-  border: 2px dashed #666;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  border-radius: 8px;
-  position: relative;
-}
-
-.dropped-card {
-  width: 100%;
-  height: 100%;
-  background-color: #3b82f6;
-  color: white;
-  text-align: center;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 8px;
-  transition: transform 0.3s ease-in-out;
-}
-
-.correct-msg {
-  color: green;
-  font-size: 18px;
-}
-
-.wrong-msg {
-  color: red;
-  font-size: 18px;
-}
