--- a/client/src/components/component.css
+++ b/client/src/components/component.css
@@ -15,6 +15,7 @@
   width: 80%;
   height: auto;
   margin-left: 10%;
+  margin-top: 40px;
 }
 
 .main-content {
@@ -63,10 +64,10 @@ button:hover {
 .operation-button {
   width: 100%;
   box-sizing: border-box; 
-  height: 100px;
+  height: 80px;
   background-color: rgb(255, 255, 255);
   color: rgb(22, 23, 54);
-  border-radius: 40px;
+  border-radius: 24px;
   border: none;
   font-size: 24px;
   display: flex;
@@ -82,6 +83,45 @@ button:hover {
 .operation-button:active {
   background-color: rgb(240, 200, 0);
   font-size: 26px;
+}
+
+.method-list {
+  display: flex;
+  width: 80%;
+  column-gap: 80px;
+  padding-left: 10px;
+  padding-right: 10px;
+  justify-content: space-between;
+
+
+}
+
+.method-button {
+  display: flex;
+  width: 100%;
+  height: 60px;
+  background-color: rgb(65, 225, 190);
+  color:rgb(22, 23, 54);
+  font-size: 24px;
+  border-radius: 20px;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  border: none;
+}
+
+.method-selected-button {
+  display: flex;
+  width: 100%;
+  height: 60px;
+  background-color: rgb(48, 165, 140);
+  color:rgb(22, 23, 54);
+  font-size: 24px;
+  border-radius: 20px;
+  cursor: pointer;
+  justify-content: center;
+  align-items: center;
+  border: none;
 }
 
 .header {
@@ -112,15 +152,15 @@ button:hover {
 .image-block {
   display: flex;
   flex-direction: column;
-  width: 35%;
+  width: 40%;
   height: 100%;
   justify-content: center;
 }
 
 .img-example-page {
-  width: 80%;
-  height: auto;
-  padding: 0 10%;
+  /* width: 60%;
+  height: 60%; */
+  padding: 20px 20%;
   object-fit: cover;
 }
 
@@ -148,11 +188,12 @@ button:hover {
 
 .example-box {
   display: flex;
-  width: 60%;
+  width: 100%;
   height: 100px;
   background-color: rgb(236, 236, 236);
   border-radius: 20px;
   border: 8px rgba(255, 222, 54, 1) solid;
+  box-sizing: border-box;
   justify-content: center;
   align-items: center;
 }
@@ -172,7 +213,8 @@ button:hover {
 .correct-incorrect-answer {
   color: rgba(255, 255, 255, 1);
   font-size: 40px;
-  transform: rotate(-15deg);
+  text-align: center;
+  padding-top: 20px;
 }
 
 .input-field {
@@ -192,6 +234,16 @@ button:hover {
   row-gap: 20px;
   justify-content: space-between;
   margin-bottom: 40px;
+}
+
+.answer-block-quiz {
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 20px;
+  justify-content: space-between;
+  margin-bottom: 40px;
+  padding: 0 10%;
 }
 
 .answer-button {
@@ -487,7 +539,7 @@ h2 {
   }
   
   .example-box {
-    width: 80%;
+    width: 100%;
     height: 100px;
     border: 6px rgba(255, 222, 54, 1) solid;
     margin-left: auto;
