--- a/client/src/components/component.css
+++ b/client/src/components/component.css
@@ -1,13 +1,13 @@
 .main-page {
   width: 100%;
   height: auto;
-  align-items: center;
+  align-items: flex-start;
   display: flex;
 }
 
 .main-img {
   width: 40%;
-  padding: auto;
+  padding-top: 20px;
   display: flex;
 }
 
@@ -31,14 +31,19 @@
 }
 
 h1 {
-  font-size: 48px;
+  font-size: 80px;
   color:  rgba(255, 222, 54, 1);
+  text-align: center;
+  font-family: "Kdam Thmor Pro", sans-serif;
+  margin: 40px 0 0 0;
 }
 
 h2 {
   font-size: 40px;
   color: rgba(255, 222, 54, 1);
+  font-family: "Kdam Thmor Pro", sans-serif;
   margin-block-end: 0;
+  text-align: center;
 }
 
 .operation-list {
@@ -86,19 +91,26 @@ button:hover {
 }
 
 .method-list {
-  display: flex;
-  width: 80%;
-  column-gap: 80px;
-  padding-left: 10px;
-  padding-right: 10px;
+  display: grid;
+  width: 100%;
+  grid-template-columns: 1fr 1fr;
+  gap: 40px;
+  padding: 0 10px;
   justify-content: space-between;
+  align-items: center;
+  margin-top: 40px;
 
+}
 
+.method-item {
+  display: flex;
+  flex-direction: column;
 }
 
 .method-button {
   display: flex;
   width: 100%;
+  flex-grow: 1;
   height: 60px;
   background-color: rgb(65, 225, 190);
   color:rgb(22, 23, 54);
@@ -112,7 +124,7 @@ button:hover {
 
 .method-selected-button {
   display: flex;
-  width: 100%;
+  width: 40%;
   height: 60px;
   background-color: rgb(48, 165, 140);
   color:rgb(22, 23, 54);
@@ -158,15 +170,12 @@ button:hover {
 }
 
 .img-example-page {
-  /* width: 60%;
-  height: 60%; */
   padding: 20px 20%;
   object-fit: cover;
 }
 
 .example-block {
   display: flex;
-  /* margin-top: 40px;; */
   flex-direction: column;
   width: 50%;
   align-items: center;
@@ -326,8 +335,8 @@ button:hover {
 }
 
 .drop-zone {
-  width: 200px;
-  height: 100px;
+  width: 240px;
+  height: 120px;
   border: 2px dashed #666;
   display: flex;
   align-items: center;
@@ -335,6 +344,8 @@ button:hover {
   text-align: center;
   border-radius: 8px;
   position: relative;
+  font-size: 16px;
+  padding: 0 10px;
 }
 
 .dropped-card {
@@ -384,6 +395,7 @@ h1 {
 
 h2 {
   font-size: 32px;
+  font-family: "Kdam Thmor Pro", sans-serif;
 }
 
 .operation-list {
